--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   "devDependencies": {
     "@types/node": "^16.10.4",
     "nodemon": "^2.0.13",
+    "prisma": "3.2.1",
     "typescript": "^4.4.4"
+  },
+  "dependencies": {
+    "@prisma/client": "3.2.1"
   }
 }
