--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
-    "@prisma/client": "3.2.1",
+    "@prisma/client": "^3.2.1",
     "apollo-server": "^3.4.0",
     "graphql": "^15.6.1"
   }
