--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/node": "^16.10.4",
     "nodemon": "^2.0.13",
     "prisma": "3.2.1",
@@ -21,6 +22,7 @@
   "dependencies": {
     "@prisma/client": "^3.2.1",
     "apollo-server": "^3.4.0",
+    "bcrypt": "^5.0.1",
     "graphql": "^15.6.1"
   }
 }
