--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon dist/index.js",
+    "dev": "nodemon --delay 500ms dist/index.js",
     "start": "node dist/index.js",
     "watch": "tsc -w",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -20,7 +20,7 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
-    "@prisma/client": "^3.2.1",
+    "@prisma/client": "^3.10.0",
     "apollo-server": "^3.4.0",
     "bcrypt": "^5.0.1",
     "graphql": "^15.6.1"
