--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^16.10.4",
     "nodemon": "^2.0.13",
     "prisma": "3.2.1",
@@ -23,6 +24,8 @@
     "@prisma/client": "^3.10.0",
     "apollo-server": "^3.4.0",
     "bcrypt": "^5.0.1",
-    "graphql": "^15.6.1"
+    "dotenv": "^16.0.0",
+    "graphql": "^15.6.1",
+    "jsonwebtoken": "^8.5.1"
   }
 }
